2013-09-19  Dario Rodriguez <dario@artica.es>

	* index.php,
	operation/common/download_file.php: Added support to
	download external files.
	* operation/download/download_external.php: Delete old
	code for external downloads.

2013-09-18  SAncho lerena <sleren2artica.es>

	* godmode/setup/setup_mail.php: Delete mail queue code 
	was missing ¿?: Added again.

2013-09-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/export_csv.php,
	  operation/contacts/contact_activity.php,
	  operation/contacts/contact_detail.php,
	  operation/contacts/contact_export.php,
	  operation/contacts/contact_files.php,
	  operation/contacts/contact_incidents.php,
	  operation/contacts/contact_inventory.php,
	  operation/contacts/contact_manage.php,
	  operation/leads/lead.php,
	  operation/leads/lead_activity.php,
	  operation/leads/lead_detail.php,
	  operation/leads/lead_export.php,
	  operation/leads/lead_files.php,
	  operation/leads/lead_history.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php,
	  operation/leads/template_manager.php,
	  include/ajax/incidents.php,
	  include/ajax/users.php,
	  operation/companies/company_detail.php,
	  operation/companies/company_files.php: Improvements on the ACL.
	  Fixed many errors. Now the default lead section is the lead search.
	  
	* include/functions_crm.php: Inprovements on many functions.
	
	* include/functions_incidents.php: Fixed the function
	"incidents_get_by_notified_email".
	
2013-09-18  Sancho Lerena <slerena@artica.es>

	* include/styles/integria.css: Added missing styles for green rows

	* include/functions_incidents.php: Fixed green and red rows. Yellow
	rows are not used at the moment. Added last WU people in the last contact
	row. Set more width for that column also.

	* operation/side_menu.php: Added quick link to "my incidents", thanks for
	the idea, Mario.

	* operation/download/browse.php: Not FRW users will not see public URL
	link and download count.
	